-upgrade to gradle 5.x -compile against java 12; fixed deprecated use of .newInstance().